# SerbleGames

./: .gitignore  LICENSE  README.md  SerbleGames.sln  TODO.md
SerbleGames.Backend/: .gitignore  Program.cs  SerbleGames.Backend.csproj  SerbleGames.Backend.http  appsettings.Development.json  appsettings.Example.json
SerbleGames.Backend/Auth/: IJwtManager.cs  JwtManager.cs
SerbleGames.Backend/Database/: AdminRepo.cs  GameRepo.cs  GamesDatabaseContext.cs  IAdminRepo.cs  IGameRepo.cs  IPackageRepo.cs  IUserRepo.cs  PackageRepo.cs  UserRepo.cs
SerbleGames.Backend/Migrations/: 20260217023333_InitialCreate.Designer.cs  20260217023333_InitialCreate.cs  20260217031442_AddGames.Designer.cs  20260217031442_AddGames.cs  20260217034159_GameReleases.Designer.cs  20260217034159_GameReleases.cs  20260217050739_AddGameIcon.Designer.cs  20260217050739_AddGameIcon.cs  20260217050825_GameIcons.Designer.cs  20260217050825_GameIcons.cs  20260217051811_AddAchievements.Designer.cs  20260217051811_AddAchievements.cs  (+7 more)
SerbleGames.Client/: OAuthHelper.cs  SerbleGames.Client.csproj  SerbleGamesClient.cs
SerbleGames.Client.Test/: Program.cs  SerbleGames.Client.Test.csproj
SerbleGames.Vue/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js
launcher-godot/: Launcher Godot.csproj  Launcher Godot.sln  export_presets.cfg  project.godot  theme.tres
serble-games-sdk/: .gitignore  CMakeLists.txt  README.md  serble_games.c  serble_games.h
serble-games-sdk/GDScript/: README_GDSCRIPT_SDK.md  serble_games_sdk.gd
serble-games-sdk/examples/: handshake_test.c
(+101 files in other folders)
